tests/snapshots/tokenize__varargs.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 3:1\nIdentifier(assert) at 3:6\n( at 3:12\nint at 3:13\nIdentifier(expected) at 3:17\n, at 3:25\nint at 3:27\nIdentifier(actual) at 3:31\n, at 3:37\nchar at 3:39\n* at 3:44\nIdentifier(code) at 3:45\n) at 3:49\n; at 3:50\nint at 4:1\nIdentifier(printf) at 4:5\n( at 4:11\nchar at 4:12\n* at 4:17\nIdentifier(fmt) at 4:18\n, at 4:21\n... at 4:23\n) at 4:26\n; at 4:27\nint at 5:1\nIdentifier(sprintf) at 5:5\n( at 5:12\nchar at 5:13\n* at 5:18\nIdentifier(buf) at 5:19\n, at 5:22\nchar at 5:24\n* at 5:29\nIdentifier(fmt) at 5:30\n, at 5:33\n... at 5:35\n) at 5:38\n; at 5:39\nint at 6:1\nIdentifier(vsprintf) at 6:5\n( at 6:13\nchar at 6:14\n* at 6:19\nIdentifier(buf) at 6:20\n, at 6:23\nchar at 6:25\n* at 6:30\nIdentifier(fmt) at 6:31\n, at 6:34\nvoid at 6:36\n* at 6:41\nIdentifier(ap) at 6:42\n) at 6:44\n; at 6:45\nint at 7:1\nIdentifier(strcmp) at 7:5\n( at 7:11\nchar at 7:12\n* at 7:17\nIdentifier(p) at 7:18\n, at 7:19\nchar at 7:21\n* at 7:26\nIdentifier(q) at 7:27\n) at 7:28\n; at 7:29\nint at 8:1\nIdentifier(strncmp) at 8:5\n( at 8:12\nchar at 8:13\n* at 8:18\nIdentifier(p) at 8:19\n, at 8:20\nchar at 8:22\n* at 8:27\nIdentifier(q) at 8:28\n, at 8:29\nlong at 8:31\nIdentifier(n) at 8:36\n) at 8:37\n; at 8:38\nint at 9:1\nIdentifier(memcmp) at 9:5\n( at 9:11\nchar at 9:12\n* at 9:17\nIdentifier(p) at 9:18\n, at 9:19\nchar at 9:21\n* at 9:26\nIdentifier(q) at 9:27\n, at 9:28\nlong at 9:30\nIdentifier(n) at 9:35\n) at 9:36\n; at 9:37\nvoid at 10:1\nIdentifier(exit) at 10:6\n( at 10:10\nint at 10:11\nIdentifier(n) at 10:15\n) at 10:16\n; at 10:17\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nvoid at 16:1\nIdentifier(assert) at 16:6\n( at 16:12\nint at 16:13\nIdentifier(expected) at 16:17\n, at 16:25\nint at 16:27\nIdentifier(actual) at 16:31\n, at 16:37\nchar at 16:39\n* at 16:44\nIdentifier(code) at 16:45\n) at 16:49\n{ at 16:51\nif at 17:3\n( at 17:6\nIdentifier(expected) at 17:7\n== at 17:16\nIdentifier(actual) at 17:19\n) at 17:25\n{ at 17:27\nIdentifier(printf) at 18:5\n( at 18:11\nStringLiteral(\"%s => %d\n\") at 18:12\n, at 18:24\nIdentifier(code) at 18:26\n, at 18:30\nIdentifier(actual) at 18:32\n) at 18:38\n; at 18:39\n} at 19:3\nelse at 19:5\n{ at 19:10\nIdentifier(printf) at 20:5\n( at 20:11\nStringLiteral(\"%s => %d expected but got %d\n\") at 20:12\n, at 20:44\nIdentifier(code) at 20:46\n, at 20:50\nIdentifier(expected) at 20:52\n, at 20:60\nIdentifier(actual) at 20:62\n) at 20:68\n; at 20:69\nIdentifier(exit) at 21:5\n( at 21:9\nIntLiteral(1, None) at 21:10\n) at 21:11\n; at 21:12\n} at 22:3\n} at 23:1\nint at 28:1\nIdentifier(sum1) at 28:5\n( at 28:9\nint at 28:10\nIdentifier(x) at 28:14\n, at 28:15\n... at 28:17\n) at 28:20\n{ at 28:22\nva_list at 29:3\nIdentifier(ap) at 29:11\n; at 29:13\nva_start at 30:3\n( at 30:11\nIdentifier(ap) at 30:12\n, at 30:14\nIdentifier(x) at 30:16\n) at 30:17\n; at 30:18\nfor at 32:3\n( at 32:7\n; at 32:8\n; at 32:9\n) at 32:10\n{ at 32:12\nint at 33:5\nIdentifier(y) at 33:9\n= at 33:11\nva_arg at 33:13\n( at 33:19\nIdentifier(ap) at 33:20\n, at 33:22\nint at 33:24\n) at 33:27\n; at 33:28\nif at 34:5\n( at 34:8\nIdentifier(y) at 34:9\n== at 34:11\nIntLiteral(0, None) at 34:14\n) at 34:15\nreturn at 35:7\nIdentifier(x) at 35:14\n; at 35:15\nIdentifier(x) at 36:5\n+= at 36:7\nIdentifier(y) at 36:10\n; at 36:11\n} at 37:3\n} at 38:1\nint at 40:1\nIdentifier(sum2) at 40:5\n( at 40:9\nint at 40:10\nIdentifier(x) at 40:14\n, at 40:15\n... at 40:17\n) at 40:20\n{ at 40:22\nva_list at 41:3\nIdentifier(ap) at 41:11\n; at 41:13\nva_start at 42:3\n( at 42:11\nIdentifier(ap) at 42:12\n, at 42:14\nIdentifier(x) at 42:16\n) at 42:17\n; at 42:18\nfor at 44:3\n( at 44:7\n; at 44:8\n; at 44:9\n) at 44:10\n{ at 44:12\ndouble at 45:5\nIdentifier(y) at 45:12\n= at 45:14\nva_arg at 45:16\n( at 45:22\nIdentifier(ap) at 45:23\n, at 45:25\ndouble at 45:27\n) at 45:33\n; at 45:34\nIdentifier(x) at 46:5\n+= at 46:7\nIdentifier(y) at 46:10\n; at 46:11\nint at 48:5\nIdentifier(z) at 48:9\n= at 48:11\nva_arg at 48:13\n( at 48:19\nIdentifier(ap) at 48:20\n, at 48:22\nint at 48:24\n) at 48:27\n; at 48:28\nif at 49:5\n( at 49:8\nIdentifier(z) at 49:9\n== at 49:11\nIntLiteral(0, None) at 49:14\n) at 49:15\nreturn at 50:7\nIdentifier(x) at 50:14\n; at 50:15\nIdentifier(x) at 51:5\n+= at 51:7\nIdentifier(z) at 51:10\n; at 51:11\n} at 52:3\n} at 53:1\nvoid at 55:1\nIdentifier(fmt) at 55:6\n( at 55:9\nchar at 55:10\n* at 55:15\nIdentifier(buf) at 55:16\n, at 55:19\nchar at 55:21\n* at 55:26\nIdentifier(fmt) at 55:27\n, at 55:30\n... at 55:32\n) at 55:35\n{ at 55:37\nva_list at 56:3\nIdentifier(ap) at 56:11\n; at 56:13\nva_start at 57:3\n( at 57:11\nIdentifier(ap) at 57:12\n, at 57:14\nIdentifier(fmt) at 57:16\n) at 57:19\n; at 57:20\nva_list at 59:3\nIdentifier(ap2) at 59:11\n; at 59:14\nIdentifier(va_copy) at 60:3\n( at 60:10\nIdentifier(ap2) at 60:11\n, at 60:14\nIdentifier(ap) at 60:16\n) at 60:18\n; at 60:19\nIdentifier(vsprintf) at 61:3\n( at 61:11\nIdentifier(buf) at 61:12\n, at 61:15\nIdentifier(fmt) at 61:17\n, at 61:20\nIdentifier(ap2) at 61:22\n) at 61:25\n; at 61:26\nva_end at 62:3\n( at 62:9\nIdentifier(buf) at 62:10\n) at 62:13\n; at 62:14\n} at 63:1\nint at 65:1\nIdentifier(main) at 65:5\n( at 65:9\n) at 65:10\n{ at 65:12\nIdentifier(assert) at 66:3\n( at 66:9\nIntLiteral(6, None) at 66:10\n, at 66:11\nIdentifier(sum1) at 66:13\n( at 66:17\nIntLiteral(1, None) at 66:18\n, at 66:19\nIntLiteral(2, None) at 66:21\n, at 66:22\nIntLiteral(3, None) at 66:24\n, at 66:25\nIntLiteral(0, None) at 66:27\n) at 66:28\n, at 66:29\nStringLiteral(\"sum1(1, 2, 3, 0)\") at 66:31\n) at 66:49\n; at 66:50\nIdentifier(assert) at 67:3\n( at 67:9\nIntLiteral(55, None) at 67:10\n, at 67:12\nIdentifier(sum1) at 67:14\n( at 67:18\nIntLiteral(1, None) at 67:19\n, at 67:20\nIntLiteral(2, None) at 67:22\n, at 67:23\nIntLiteral(3, None) at 67:25\n, at 67:26\nIntLiteral(4, None) at 67:28\n, at 67:29\nIntLiteral(5, None) at 67:31\n, at 67:32\nIntLiteral(6, None) at 67:34\n, at 67:35\nIntLiteral(7, None) at 67:37\n, at 67:38\nIntLiteral(8, None) at 67:40\n, at 67:41\nIntLiteral(9, None) at 67:43\n, at 67:44\nIntLiteral(10, None) at 67:46\n, at 67:48\nIntLiteral(0, None) at 67:50\n) at 67:51\n, at 67:52\nStringLiteral(\"sum1(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 0)\") at 67:54\n) at 67:94\n; at 67:95\nIdentifier(assert) at 68:3\n( at 68:9\nIntLiteral(21, None) at 68:10\n, at 68:12\nIdentifier(sum2) at 68:14\n( at 68:18\nIntLiteral(1, None) at 68:19\n, at 68:20\nFloatLiteral(2, None) at 68:22\n, at 68:25\nIntLiteral(3, None) at 68:27\n, at 68:28\nFloatLiteral(4, None) at 68:30\n, at 68:33\nIntLiteral(5, None) at 68:35\n, at 68:36\nFloatLiteral(6, None) at 68:38\n, at 68:41\nIntLiteral(0, None) at 68:43\n) at 68:44\n, at 68:45\nStringLiteral(\"sum2(1, 2.0, 3, 4.0, 5, 6.0, 0)\") at 68:47\n) at 68:80\n; at 68:81\nIdentifier(assert) at 69:3\n( at 69:9\nIntLiteral(21, None) at 69:10\n, at 69:12\nIdentifier(sum2) at 69:14\n( at 69:18\nIntLiteral(1, None) at 69:19\n, at 69:20\nFloatLiteral(2, None) at 69:22\n, at 69:25\nIntLiteral(3, None) at 69:27\n, at 69:28\nFloatLiteral(4, None) at 69:30\n, at 69:33\nIntLiteral(5, None) at 69:35\n, at 69:36\nFloatLiteral(6, None) at 69:38\n, at 69:41\nIntLiteral(0, None) at 69:43\n) at 69:44\n, at 69:45\nStringLiteral(\"sum2(1, 2.0, 3, 4.0, 5, 6.0, 0)\") at 69:47\n) at 69:80\n; at 69:81\nIdentifier(assert) at 70:3\n( at 70:9\nIntLiteral(210, None) at 70:10\n, at 70:13\nIdentifier(sum2) at 70:15\n( at 70:19\nIntLiteral(1, None) at 70:20\n, at 70:21\nFloatLiteral(2, None) at 70:23\n, at 70:26\nIntLiteral(3, None) at 70:28\n, at 70:29\nFloatLiteral(4, None) at 70:31\n, at 70:34\nIntLiteral(5, None) at 70:36\n, at 70:37\nFloatLiteral(6, None) at 70:39\n, at 70:42\nIntLiteral(7, None) at 70:44\n, at 70:45\nFloatLiteral(8, None) at 70:47\n, at 70:50\nIntLiteral(9, None) at 70:52\n, at 70:53\nFloatLiteral(10, None) at 70:55\n, at 70:59\nIntLiteral(11, None) at 70:61\n, at 70:63\nFloatLiteral(12, None) at 70:65\n, at 70:69\nIntLiteral(13, None) at 70:71\n, at 70:73\nFloatLiteral(14, None) at 70:75\n, at 70:79\nIntLiteral(15, None) at 70:81\n, at 70:83\nFloatLiteral(16, None) at 70:85\n, at 70:89\nIntLiteral(17, None) at 70:91\n, at 70:93\nFloatLiteral(18, None) at 70:95\n, at 70:99\nIntLiteral(19, None) at 70:101\n, at 70:103\nFloatLiteral(20, None) at 70:105\n, at 70:109\nIntLiteral(0, None) at 70:111\n) at 70:112\n, at 70:113\nStringLiteral(\"sum2(1, 2.0, 3, 4.0, 5, 6.0, 7, 8.0, 9, 10.0, 11, 12.0, 13, 14.0, 15, 16.0, 17, 18.0, 19, 20.0, 0)\") at 70:115\n) at 70:215\n; at 70:216\nIdentifier(assert) at 71:3\n( at 71:9\nIntLiteral(0, None) at 71:10\n, at 71:11\n( at 71:13\n{ at 71:14\nchar at 71:16\nIdentifier(buf) at 71:21\n[ at 71:24\nIntLiteral(100, None) at 71:25\n] at 71:28\n; at 71:29\nIdentifier(fmt) at 71:31\n( at 71:34\nIdentifier(buf) at 71:35\n, at 71:38\nStringLiteral(\"%d %d\") at 71:40\n, at 71:47\nIntLiteral(2, None) at 71:49\n, at 71:50\nIntLiteral(3, None) at 71:52\n) at 71:53\n; at 71:54\nIdentifier(strcmp) at 71:56\n( at 71:62\nIdentifier(buf) at 71:63\n, at 71:66\nStringLiteral(\"2 3\") at 71:68\n) at 71:73\n; at 71:74\n} at 71:76\n) at 71:77\n, at 71:78\nStringLiteral(\"({ char buf[100]; fmt(buf, \") at 71:80\n% at 71:109\nIdentifier(d) at 71:110\n% at 71:112\nIdentifier(d) at 71:113\nStringLiteral(\", 2, 3); strcmp(buf, \") at 71:114\nIntLiteral(2, None) at 71:137\nIntLiteral(3, None) at 71:139\nStringLiteral(\"); })\") at 71:140\n) at 71:147\n; at 71:148\nIdentifier(printf) at 73:3\n( at 73:9\nStringLiteral(\"OK\n\") at 73:10\n) at 73:16\n; at 73:17\nreturn at 74:3\nIntLiteral(0, None) at 74:10\n; at 74:11\n} at 75:1\nEOF at 76:1\n"
stderr: ""
status: 0
