tests/snapshots/tokenize__variables.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int\nIdentifier(main)\n(\n)\n{\nint\nIdentifier(x)\n=\nIntLiteral(5)\n;\nint\nIdentifier(y)\n=\nIntLiteral(10)\n;\nreturn\nIdentifier(x)\n+\nIdentifier(y)\n;\n}\nEOF\n"
stderr: ""
status: 0
