tests/snapshots/tokenize__variadic_macros.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(printf) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(fmt) at 3:18\n, at 3:21\n... at 3:23\n) at 3:26\n; at 3:27\nint at 5:1\nIdentifier(main) at 5:5\n( at 5:9\n) at 5:10\n{ at 5:12\nIdentifier(printf) at 7:5\n( at 7:11\nStringLiteral(\"%d %d %d\n\") at 7:12\n, at 7:24\nIntLiteral(10, None) at 7:26\n, at 7:28\nIntLiteral(20, None) at 7:30\n, at 7:32\nIntLiteral(30, None) at 7:34\n) at 7:36\n; at 7:37\nIdentifier(printf) at 10:5\n( at 10:11\nStringLiteral(\"%d\n\") at 10:12\n, at 10:18\nIntLiteral(42, None) at 10:20\n) at 10:22\n; at 10:23\nint at 13:5\nIdentifier(x) at 13:9\n= at 13:11\n( at 13:13\nIntLiteral(5, None) at 13:14\n) at 13:15\n; at 13:16\nIdentifier(printf) at 14:5\n( at 14:11\nStringLiteral(\"%d\n\") at 14:12\n, at 14:18\nIdentifier(x) at 14:20\n) at 14:21\n; at 14:22\nint at 16:5\nIdentifier(y) at 16:9\n= at 16:11\n( at 16:13\nIntLiteral(5, None) at 16:14\n+ at 16:16\nIntLiteral(10, None) at 16:18\n) at 16:20\n; at 16:21\nIdentifier(printf) at 17:5\n( at 17:11\nStringLiteral(\"%d\n\") at 17:12\n, at 17:18\nIdentifier(y) at 17:20\n) at 17:21\n; at 17:22\nint at 19:5\nIdentifier(z) at 19:9\n= at 19:11\n( at 19:13\nIntLiteral(5, None) at 19:14\n+ at 19:16\nIntLiteral(10, None) at 19:18\n+ at 19:21\nIntLiteral(15, None) at 19:23\n) at 19:25\n; at 19:26\nIdentifier(printf) at 20:5\n( at 20:11\nStringLiteral(\"%d\n\") at 20:12\n, at 20:18\nIdentifier(z) at 20:20\n) at 20:21\n; at 20:22\nreturn at 22:5\nIntLiteral(0, None) at 22:12\n; at 22:13\n} at 23:1\nEOF at 24:1\n"
stderr: ""
status: 0
