tests/snapshots/tokenize__variadic_simple.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(sum_ints) at 2:5\n( at 2:13\nint at 2:14\nIdentifier(count) at 2:18\n, at 2:23\n... at 2:25\n) at 2:28\n; at 2:29\nint at 4:1\nIdentifier(main) at 4:5\n( at 4:9\n) at 4:10\n{ at 4:12\nreturn at 6:5\nIntLiteral(0) at 6:12\n; at 6:13\n} at 7:1\nEOF at 8:1\n"
stderr: ""
status: 0
