tests/snapshots/tokenize__vla.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 3:1\nIdentifier(assert) at 3:6\n( at 3:12\nint at 3:13\nIdentifier(expected) at 3:17\n, at 3:25\nint at 3:27\nIdentifier(actual) at 3:31\n, at 3:37\nchar at 3:39\n* at 3:44\nIdentifier(code) at 3:45\n) at 3:49\n; at 3:50\nint at 4:1\nIdentifier(printf) at 4:5\n( at 4:11\nchar at 4:12\n* at 4:17\nIdentifier(fmt) at 4:18\n, at 4:21\n... at 4:23\n) at 4:26\n; at 4:27\nint at 5:1\nIdentifier(sprintf) at 5:5\n( at 5:12\nchar at 5:13\n* at 5:18\nIdentifier(buf) at 5:19\n, at 5:22\nchar at 5:24\n* at 5:29\nIdentifier(fmt) at 5:30\n, at 5:33\n... at 5:35\n) at 5:38\n; at 5:39\nint at 6:1\nIdentifier(vsprintf) at 6:5\n( at 6:13\nchar at 6:14\n* at 6:19\nIdentifier(buf) at 6:20\n, at 6:23\nchar at 6:25\n* at 6:30\nIdentifier(fmt) at 6:31\n, at 6:34\nvoid at 6:36\n* at 6:41\nIdentifier(ap) at 6:42\n) at 6:44\n; at 6:45\nint at 7:1\nIdentifier(strcmp) at 7:5\n( at 7:11\nchar at 7:12\n* at 7:17\nIdentifier(p) at 7:18\n, at 7:19\nchar at 7:21\n* at 7:26\nIdentifier(q) at 7:27\n) at 7:28\n; at 7:29\nint at 8:1\nIdentifier(strncmp) at 8:5\n( at 8:12\nchar at 8:13\n* at 8:18\nIdentifier(p) at 8:19\n, at 8:20\nchar at 8:22\n* at 8:27\nIdentifier(q) at 8:28\n, at 8:29\nlong at 8:31\nIdentifier(n) at 8:36\n) at 8:37\n; at 8:38\nint at 9:1\nIdentifier(memcmp) at 9:5\n( at 9:11\nchar at 9:12\n* at 9:17\nIdentifier(p) at 9:18\n, at 9:19\nchar at 9:21\n* at 9:26\nIdentifier(q) at 9:27\n, at 9:28\nlong at 9:30\nIdentifier(n) at 9:35\n) at 9:36\n; at 9:37\nvoid at 10:1\nIdentifier(exit) at 10:6\n( at 10:10\nint at 10:11\nIdentifier(n) at 10:15\n) at 10:16\n; at 10:17\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nvoid at 16:1\nIdentifier(assert) at 16:6\n( at 16:12\nint at 16:13\nIdentifier(expected) at 16:17\n, at 16:25\nint at 16:27\nIdentifier(actual) at 16:31\n, at 16:37\nchar at 16:39\n* at 16:44\nIdentifier(code) at 16:45\n) at 16:49\n{ at 16:51\nif at 17:3\n( at 17:6\nIdentifier(expected) at 17:7\n== at 17:16\nIdentifier(actual) at 17:19\n) at 17:25\n{ at 17:27\nIdentifier(printf) at 18:5\n( at 18:11\nStringLiteral(\"%s => %d\n\") at 18:12\n, at 18:24\nIdentifier(code) at 18:26\n, at 18:30\nIdentifier(actual) at 18:32\n) at 18:38\n; at 18:39\n} at 19:3\nelse at 19:5\n{ at 19:10\nIdentifier(printf) at 20:5\n( at 20:11\nStringLiteral(\"%s => %d expected but got %d\n\") at 20:12\n, at 20:44\nIdentifier(code) at 20:46\n, at 20:50\nIdentifier(expected) at 20:52\n, at 20:60\nIdentifier(actual) at 20:62\n) at 20:68\n; at 20:69\nIdentifier(exit) at 21:5\n( at 21:9\nIntLiteral(1, None) at 21:10\n) at 21:11\n; at 21:12\n} at 22:3\n} at 23:1\nint at 25:1\nIdentifier(main) at 25:5\n( at 25:9\n) at 25:10\n{ at 25:12\nIdentifier(assert) at 26:3\n( at 26:9\nIntLiteral(20, None) at 26:10\n, at 26:12\n( at 26:14\n{ at 26:15\nint at 26:17\nIdentifier(n) at 26:21\n= at 26:22\nIntLiteral(5, None) at 26:23\n; at 26:24\nint at 26:26\nIdentifier(x) at 26:30\n[ at 26:31\nIdentifier(n) at 26:32\n] at 26:33\n; at 26:34\nsizeof at 26:36\n( at 26:42\nIdentifier(x) at 26:43\n) at 26:44\n; at 26:45\n} at 26:47\n) at 26:48\n, at 26:49\nStringLiteral(\"({ int n=5; int 20[n]; sizeof(20); })\") at 26:51\n) at 26:90\n; at 26:91\nIdentifier(assert) at 27:3\n( at 27:9\n( at 27:10\nIntLiteral(5, None) at 27:11\n+ at 27:12\nIntLiteral(1, None) at 27:13\n) at 27:14\n* at 27:15\n( at 27:16\nIntLiteral(8, None) at 27:17\n* at 27:18\nIntLiteral(2, None) at 27:19\n) at 27:20\n* at 27:21\nIntLiteral(4, None) at 27:22\n, at 27:23\n( at 27:25\n{ at 27:26\nint at 27:28\nIdentifier(m) at 27:32\n= at 27:33\nIntLiteral(5, None) at 27:34\n, at 27:35\nIdentifier(n) at 27:37\n= at 27:38\nIntLiteral(8, None) at 27:39\n; at 27:40\nint at 27:42\nIdentifier(x) at 27:46\n[ at 27:47\nIdentifier(m) at 27:48\n+ at 27:49\nIntLiteral(1, None) at 27:50\n] at 27:51\n[ at 27:52\nIdentifier(n) at 27:53\n* at 27:54\nIntLiteral(2, None) at 27:55\n] at 27:56\n; at 27:57\nsizeof at 27:59\n( at 27:65\nIdentifier(x) at 27:66\n) at 27:67\n; at 27:68\n} at 27:70\n) at 27:71\n, at 27:72\nStringLiteral(\"({ int m=5, n=8; int (5+1)*(8*2)*4[m+1][n*2]; sizeof((5+1)*(8*2)*4); })\") at 27:74\n) at 27:147\n; at 27:148\nIdentifier(assert) at 29:3\n( at 29:9\nIntLiteral(8, None) at 29:10\n, at 29:11\n( at 29:13\n{ at 29:14\nchar at 29:16\nIdentifier(n) at 29:21\n= at 29:22\nIntLiteral(10, None) at 29:23\n; at 29:25\nint at 29:27\n( at 29:31\n* at 29:32\nIdentifier(x) at 29:33\n) at 29:34\n[ at 29:35\nIdentifier(n) at 29:36\n] at 29:37\n[ at 29:38\nIdentifier(n) at 29:39\n+ at 29:40\nIntLiteral(2, None) at 29:41\n] at 29:42\n; at 29:43\nsizeof at 29:45\n( at 29:51\nIdentifier(x) at 29:52\n) at 29:53\n; at 29:54\n} at 29:56\n) at 29:57\n, at 29:58\nStringLiteral(\"({ char n=10; int (*8)[n][n+2]; sizeof(8); })\") at 29:60\n) at 29:107\n; at 29:108\nIdentifier(assert) at 30:3\n( at 30:9\nIntLiteral(480, None) at 30:10\n, at 30:13\n( at 30:15\n{ at 30:16\nchar at 30:18\nIdentifier(n) at 30:23\n= at 30:24\nIntLiteral(10, None) at 30:25\n; at 30:27\nint at 30:29\n( at 30:33\n* at 30:34\nIdentifier(x) at 30:35\n) at 30:36\n[ at 30:37\nIdentifier(n) at 30:38\n] at 30:39\n[ at 30:40\nIdentifier(n) at 30:41\n+ at 30:42\nIntLiteral(2, None) at 30:43\n] at 30:44\n; at 30:45\nsizeof at 30:47\n( at 30:53\n* at 30:54\nIdentifier(x) at 30:55\n) at 30:56\n; at 30:57\n} at 30:59\n) at 30:60\n, at 30:61\nStringLiteral(\"({ char n=10; int (*480)[n][n+2]; sizeof(*480); })\") at 30:63\n) at 30:115\n; at 30:116\nIdentifier(assert) at 31:3\n( at 31:9\nIntLiteral(48, None) at 31:10\n, at 31:12\n( at 31:14\n{ at 31:15\nchar at 31:17\nIdentifier(n) at 31:22\n= at 31:23\nIntLiteral(10, None) at 31:24\n; at 31:26\nint at 31:28\n( at 31:32\n* at 31:33\nIdentifier(x) at 31:34\n) at 31:35\n[ at 31:36\nIdentifier(n) at 31:37\n] at 31:38\n[ at 31:39\nIdentifier(n) at 31:40\n+ at 31:41\nIntLiteral(2, None) at 31:42\n] at 31:43\n; at 31:44\nsizeof at 31:46\n( at 31:52\n* at 31:53\n* at 31:54\nIdentifier(x) at 31:55\n) at 31:56\n; at 31:57\n} at 31:59\n) at 31:60\n, at 31:61\nStringLiteral(\"({ char n=10; int (*48)[n][n+2]; sizeof(**48); })\") at 31:63\n) at 31:114\n; at 31:115\nIdentifier(assert) at 32:3\n( at 32:9\nIntLiteral(4, None) at 32:10\n, at 32:11\n( at 32:13\n{ at 32:14\nchar at 32:16\nIdentifier(n) at 32:21\n= at 32:22\nIntLiteral(10, None) at 32:23\n; at 32:25\nint at 32:27\n( at 32:31\n* at 32:32\nIdentifier(x) at 32:33\n) at 32:34\n[ at 32:35\nIdentifier(n) at 32:36\n] at 32:37\n[ at 32:38\nIdentifier(n) at 32:39\n+ at 32:40\nIntLiteral(2, None) at 32:41\n] at 32:42\n; at 32:43\nsizeof at 32:45\n( at 32:51\n* at 32:52\n* at 32:53\n* at 32:54\nIdentifier(x) at 32:55\n) at 32:56\n; at 32:57\n} at 32:59\n) at 32:60\n, at 32:61\nStringLiteral(\"({ char n=10; int (*4)[n][n+2]; sizeof(***4); })\") at 32:63\n) at 32:113\n; at 32:114\nIdentifier(assert) at 34:3\n( at 34:9\nIntLiteral(60, None) at 34:10\n, at 34:12\n( at 34:14\n{ at 34:15\nchar at 34:17\nIdentifier(n) at 34:22\n= at 34:23\nIntLiteral(3, None) at 34:24\n; at 34:25\nint at 34:27\nIdentifier(x) at 34:31\n[ at 34:32\nIntLiteral(5, None) at 34:33\n] at 34:34\n[ at 34:35\nIdentifier(n) at 34:36\n] at 34:37\n; at 34:38\nsizeof at 34:40\n( at 34:46\nIdentifier(x) at 34:47\n) at 34:48\n; at 34:49\n} at 34:51\n) at 34:52\n, at 34:53\nStringLiteral(\"({ char n=3; int 60[5][n]; sizeof(60); })\") at 34:55\n) at 34:98\n; at 34:99\nIdentifier(assert) at 35:3\n( at 35:9\nIntLiteral(12, None) at 35:10\n, at 35:12\n( at 35:14\n{ at 35:15\nchar at 35:17\nIdentifier(n) at 35:22\n= at 35:23\nIntLiteral(3, None) at 35:24\n; at 35:25\nint at 35:27\nIdentifier(x) at 35:31\n[ at 35:32\nIntLiteral(5, None) at 35:33\n] at 35:34\n[ at 35:35\nIdentifier(n) at 35:36\n] at 35:37\n; at 35:38\nsizeof at 35:40\n( at 35:46\n* at 35:47\nIdentifier(x) at 35:48\n) at 35:49\n; at 35:50\n} at 35:52\n) at 35:53\n, at 35:54\nStringLiteral(\"({ char n=3; int 12[5][n]; sizeof(*12); })\") at 35:56\n) at 35:100\n; at 35:101\nIdentifier(assert) at 37:3\n( at 37:9\nIntLiteral(60, None) at 37:10\n, at 37:12\n( at 37:14\n{ at 37:15\nchar at 37:17\nIdentifier(n) at 37:22\n= at 37:23\nIntLiteral(3, None) at 37:24\n; at 37:25\nint at 37:27\nIdentifier(x) at 37:31\n[ at 37:32\nIdentifier(n) at 37:33\n] at 37:34\n[ at 37:35\nIntLiteral(5, None) at 37:36\n] at 37:37\n; at 37:38\nsizeof at 37:40\n( at 37:46\nIdentifier(x) at 37:47\n) at 37:48\n; at 37:49\n} at 37:51\n) at 37:52\n, at 37:53\nStringLiteral(\"({ char n=3; int 60[n][5]; sizeof(60); })\") at 37:55\n) at 37:98\n; at 37:99\nIdentifier(assert) at 38:3\n( at 38:9\nIntLiteral(20, None) at 38:10\n, at 38:12\n( at 38:14\n{ at 38:15\nchar at 38:17\nIdentifier(n) at 38:22\n= at 38:23\nIntLiteral(3, None) at 38:24\n; at 38:25\nint at 38:27\nIdentifier(x) at 38:31\n[ at 38:32\nIdentifier(n) at 38:33\n] at 38:34\n[ at 38:35\nIntLiteral(5, None) at 38:36\n] at 38:37\n; at 38:38\nsizeof at 38:40\n( at 38:46\n* at 38:47\nIdentifier(x) at 38:48\n) at 38:49\n; at 38:50\n} at 38:52\n) at 38:53\n, at 38:54\nStringLiteral(\"({ char n=3; int 20[n][5]; sizeof(*20); })\") at 38:56\n) at 38:100\n; at 38:101\nIdentifier(assert) at 40:3\n( at 40:9\nIntLiteral(0, None) at 40:10\n, at 40:11\n( at 40:13\n{ at 40:14\nint at 40:16\nIdentifier(n) at 40:20\n= at 40:21\nIntLiteral(10, None) at 40:22\n; at 40:24\nint at 40:26\nIdentifier(x) at 40:30\n[ at 40:31\nIdentifier(n) at 40:32\n+ at 40:33\nIntLiteral(1, None) at 40:34\n] at 40:35\n[ at 40:36\nIdentifier(n) at 40:37\n+ at 40:38\nIntLiteral(6, None) at 40:39\n] at 40:40\n; at 40:41\nint at 40:43\n* at 40:47\nIdentifier(p) at 40:48\n= at 40:49\nIdentifier(x) at 40:50\n; at 40:51\nfor at 40:53\n( at 40:57\nint at 40:58\nIdentifier(i) at 40:62\n= at 40:64\nIntLiteral(0, None) at 40:66\n; at 40:67\nIdentifier(i) at 40:69\n< at 40:70\nsizeof at 40:71\n( at 40:77\nIdentifier(x) at 40:78\n) at 40:79\n/ at 40:80\nIntLiteral(4, None) at 40:81\n; at 40:82\nIdentifier(i) at 40:84\n++ at 40:85\n) at 40:87\nIdentifier(p) at 40:89\n[ at 40:90\nIdentifier(i) at 40:91\n] at 40:92\n= at 40:93\nIdentifier(i) at 40:94\n; at 40:95\nIdentifier(x) at 40:97\n[ at 40:98\nIntLiteral(0, None) at 40:99\n] at 40:100\n[ at 40:101\nIntLiteral(0, None) at 40:102\n] at 40:103\n; at 40:104\n} at 40:106\n) at 40:107\n, at 40:108\nStringLiteral(\"({ int n=10; int 0[n+1][n+6]; int *p=0; for (int i = 0; i<sizeof(0)/4; i++) p[i]=i; 0[0][0]; })\") at 40:110\n) at 40:207\n; at 40:208\nIdentifier(assert) at 41:3\n( at 41:9\nIntLiteral(5, None) at 41:10\n, at 41:11\n( at 41:13\n{ at 41:14\nint at 41:16\nIdentifier(n) at 41:20\n= at 41:21\nIntLiteral(10, None) at 41:22\n; at 41:24\nint at 41:26\nIdentifier(x) at 41:30\n[ at 41:31\nIdentifier(n) at 41:32\n+ at 41:33\nIntLiteral(1, None) at 41:34\n] at 41:35\n[ at 41:36\nIdentifier(n) at 41:37\n+ at 41:38\nIntLiteral(6, None) at 41:39\n] at 41:40\n; at 41:41\nint at 41:43\n* at 41:47\nIdentifier(p) at 41:48\n= at 41:49\nIdentifier(x) at 41:50\n; at 41:51\nfor at 41:53\n( at 41:57\nint at 41:58\nIdentifier(i) at 41:62\n= at 41:64\nIntLiteral(0, None) at 41:66\n; at 41:67\nIdentifier(i) at 41:69\n< at 41:70\nsizeof at 41:71\n( at 41:77\nIdentifier(x) at 41:78\n) at 41:79\n/ at 41:80\nIntLiteral(4, None) at 41:81\n; at 41:82\nIdentifier(i) at 41:84\n++ at 41:85\n) at 41:87\nIdentifier(p) at 41:89\n[ at 41:90\nIdentifier(i) at 41:91\n] at 41:92\n= at 41:93\nIdentifier(i) at 41:94\n; at 41:95\nIdentifier(x) at 41:97\n[ at 41:98\nIntLiteral(0, None) at 41:99\n] at 41:100\n[ at 41:101\nIntLiteral(5, None) at 41:102\n] at 41:103\n; at 41:104\n} at 41:106\n) at 41:107\n, at 41:108\nStringLiteral(\"({ int n=10; int 5[n+1][n+6]; int *p=5; for (int i = 0; i<sizeof(5)/4; i++) p[i]=i; 5[0][5]; })\") at 41:110\n) at 41:207\n; at 41:208\nIdentifier(assert) at 42:3\n( at 42:9\nIntLiteral(5, None) at 42:10\n* at 42:11\nIntLiteral(16, None) at 42:12\n+ at 42:14\nIntLiteral(2, None) at 42:15\n, at 42:16\n( at 42:18\n{ at 42:19\nint at 42:21\nIdentifier(n) at 42:25\n= at 42:26\nIntLiteral(10, None) at 42:27\n; at 42:29\nint at 42:31\nIdentifier(x) at 42:35\n[ at 42:36\nIdentifier(n) at 42:37\n+ at 42:38\nIntLiteral(1, None) at 42:39\n] at 42:40\n[ at 42:41\nIdentifier(n) at 42:42\n+ at 42:43\nIntLiteral(6, None) at 42:44\n] at 42:45\n; at 42:46\nint at 42:48\n* at 42:52\nIdentifier(p) at 42:53\n= at 42:54\nIdentifier(x) at 42:55\n; at 42:56\nfor at 42:58\n( at 42:62\nint at 42:63\nIdentifier(i) at 42:67\n= at 42:69\nIntLiteral(0, None) at 42:71\n; at 42:72\nIdentifier(i) at 42:74\n< at 42:75\nsizeof at 42:76\n( at 42:82\nIdentifier(x) at 42:83\n) at 42:84\n/ at 42:85\nIntLiteral(4, None) at 42:86\n; at 42:87\nIdentifier(i) at 42:89\n++ at 42:90\n) at 42:92\nIdentifier(p) at 42:94\n[ at 42:95\nIdentifier(i) at 42:96\n] at 42:97\n= at 42:98\nIdentifier(i) at 42:99\n; at 42:100\nIdentifier(x) at 42:102\n[ at 42:103\nIntLiteral(5, None) at 42:104\n] at 42:105\n[ at 42:106\nIntLiteral(2, None) at 42:107\n] at 42:108\n; at 42:109\n} at 42:111\n) at 42:112\n, at 42:113\nStringLiteral(\"({ int n=10; int 5*16+2[n+1][n+6]; int *p=5*16+2; for (int i = 0; i<sizeof(5*16+2)/4; i++) p[i]=i; 5*16+2[5][2]; })\") at 42:115\n) at 42:232\n; at 42:233\nIdentifier(assert) at 44:3\n( at 44:9\nIntLiteral(10, None) at 44:10\n, at 44:12\n( at 44:14\n{ at 44:15\nint at 44:17\nIdentifier(n) at 44:21\n= at 44:22\nIntLiteral(5, None) at 44:23\n; at 44:24\nsizeof at 44:26\n( at 44:32\nchar at 44:33\n[ at 44:37\nIntLiteral(2, None) at 44:38\n] at 44:39\n[ at 44:40\nIdentifier(n) at 44:41\n] at 44:42\n) at 44:43\n; at 44:44\n} at 44:46\n) at 44:47\n, at 44:48\nStringLiteral(\"({ int n=5; sizeof(char[2][n]); })\") at 44:50\n) at 44:86\n; at 44:87\nIdentifier(printf) at 46:3\n( at 46:9\nStringLiteral(\"OK\n\") at 46:10\n) at 46:16\n; at 46:17\nreturn at 47:3\nIntLiteral(0, None) at 47:10\n; at 47:11\n} at 48:1\nEOF at 49:1\n"
stderr: ""
status: 0
