tests/snapshots/tokenize__while_loop.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(sum) at 2:9\n= at 2:13\nIntLiteral(0, None) at 2:15\n; at 2:16\nint at 3:5\nIdentifier(i) at 3:9\n= at 3:11\nIntLiteral(1, None) at 3:13\n; at 3:14\nwhile at 4:5\n( at 4:11\nIdentifier(i) at 4:12\n<= at 4:14\nIntLiteral(5, None) at 4:17\n) at 4:18\n{ at 4:20\nIdentifier(sum) at 5:9\n= at 5:13\nIdentifier(sum) at 5:15\n+ at 5:19\nIdentifier(i) at 5:21\n; at 5:22\nIdentifier(i) at 6:9\n= at 6:11\nIdentifier(i) at 6:13\n+ at 6:15\nIntLiteral(1, None) at 6:17\n; at 6:18\n} at 7:5\nreturn at 8:5\nIdentifier(sum) at 8:12\n; at 8:15\n} at 9:1\nEOF at 10:1\n"
stderr: ""
status: 0
