tests/snapshots/tokenize__wide_literals.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "typedef at 1:1\nint at 1:9\nIdentifier(wchar_t) at 1:13\n; at 1:20\nint at 3:1\nIdentifier(main) at 3:5\n( at 3:9\n) at 3:10\n{ at 3:12\nIdentifier(wchar_t) at 4:5\nIdentifier(wc) at 4:13\n= at 4:16\nIntLiteral(65, None) at 4:18\n; at 4:22\nif at 5:5\n( at 5:8\nIdentifier(wc) at 5:9\n!= at 5:12\nIntLiteral(65, None) at 5:15\n) at 5:17\n{ at 5:19\nreturn at 6:9\nIntLiteral(1, None) at 6:16\n; at 6:17\n} at 7:5\nIdentifier(wchar_t) at 9:5\nIdentifier(ws) at 9:13\n[ at 9:15\n] at 9:16\n= at 9:18\nWideStringLiteral(L\"Hi\") at 9:20\n; at 9:25\nif at 10:5\n( at 10:8\nIdentifier(ws) at 10:9\n[ at 10:11\nIntLiteral(0, None) at 10:12\n] at 10:13\n!= at 10:15\nCharLiteral(72) at 10:18\n) at 10:21\n{ at 10:23\nreturn at 11:9\nIntLiteral(2, None) at 11:16\n; at 11:17\n} at 12:5\nif at 13:5\n( at 13:8\nIdentifier(ws) at 13:9\n[ at 13:11\nIntLiteral(1, None) at 13:12\n] at 13:13\n!= at 13:15\nCharLiteral(105) at 13:18\n) at 13:21\n{ at 13:23\nreturn at 14:9\nIntLiteral(3, None) at 14:16\n; at 14:17\n} at 15:5\nif at 16:5\n( at 16:8\nIdentifier(ws) at 16:9\n[ at 16:11\nIntLiteral(2, None) at 16:12\n] at 16:13\n!= at 16:15\nIntLiteral(0, None) at 16:18\n) at 16:19\n{ at 16:21\nreturn at 17:9\nIntLiteral(4, None) at 17:16\n; at 17:17\n} at 18:5\nIdentifier(wchar_t) at 20:5\n* at 20:13\nIdentifier(p) at 20:14\n= at 20:16\nWideStringLiteral(L\"OK\") at 20:18\n; at 20:23\nif at 21:5\n( at 21:8\nIdentifier(p) at 21:9\n[ at 21:10\nIntLiteral(0, None) at 21:11\n] at 21:12\n!= at 21:14\nCharLiteral(79) at 21:17\n|| at 21:21\nIdentifier(p) at 21:24\n[ at 21:25\nIntLiteral(1, None) at 21:26\n] at 21:27\n!= at 21:29\nCharLiteral(75) at 21:32\n|| at 21:36\nIdentifier(p) at 21:39\n[ at 21:40\nIntLiteral(2, None) at 21:41\n] at 21:42\n!= at 21:44\nIntLiteral(0, None) at 21:47\n) at 21:48\n{ at 21:50\nreturn at 22:9\nIntLiteral(5, None) at 22:16\n; at 22:17\n} at 23:5\nreturn at 25:5\nIntLiteral(0, None) at 25:12\n; at 25:13\n} at 26:1\nEOF at 27:1\n"
stderr: ""
status: 0
